# rust-gpu-bindless

./: Cargo.toml  plan.md  terrain.glsl
crates/bevy/: Cargo.toml
crates/bevy/src/: lib.rs
crates/buffer-content/src/: glam.rs
crates/core/: Cargo.toml
crates/core/src/pipeline/: recording.rs  rendering.rs
crates/core/src/platform/: mod.rs
crates/core/src/platform/ash/: bindless.rs  init.rs  recording.rs
crates/core/src/platform/wgpu_hal/: access_type.rs  bindless.rs  bindless_pipeline.rs  convert.rs  executing.rs  mod.rs  recording.rs  rendering.rs
crates/shader-builder/src/: lib.rs
crates/winit/src/: event_loop.rs
tests/bevy-test/: Cargo.toml
tests/bevy-test/src/: main.rs
tests/integration-test/: Cargo.toml  build.rs
tests/integration-test-shader/src/: lib.rs  simple_compute.rs  terrain.rs
tests/integration-test/src/: simple_compute.rs
