[package]
name = "integration-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# members
rust-gpu-bindless-core = { workspace = true, features = ["ash"] }
rust-gpu-bindless-winit = { workspace = true, features = ["ash"] }
integration-test-shader = { workspace = true }

# vulkan
winit = { workspace = true }
ash = { workspace = true }

# bytes and numbers
glam = { workspace = true }

# other
smallvec = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
approx = { workspace = true }
spirv-cross2 = { version = "0.6.0", features = ["full"] }


[build-dependencies]
anyhow = { workspace = true }
rust-gpu-bindless-shader-builder = { workspace = true }
