[package]
name = "integration-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# members
rust-gpu-bindless-core = { workspace = true, features = ["ash"] }
rust-gpu-bindless-winit = { workspace = true, features = ["ash"] }
rust-gpu-bindless-egui = { workspace = true, features = ["winit"] }
integration-test-shader = { workspace = true }

# vulkan
winit = { workspace = true }
ash = { workspace = true }

# bytes and numbers
glam = { workspace = true }

# other
smallvec = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
approx = { workspace = true }
spirv-cross2 = { version = "0.6.0", features = ["full"] }
png = "0.17"

# egui
egui = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
rust-gpu-bindless-shader-builder = { workspace = true }
